--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Don
+name: Run CCXT Trading Bot
 
 on:
   schedule:
@@ -23,3 +23,12 @@ jobs:
 
       - name: Run bot
         run: python bot.py
+
+      # ✅ Auto-restart using GitHub API
+      - name: Trigger Next Run
+        run: |
+          curl -X POST -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GH_PAT }}" \
+          https://api.github.com/repos/${{ github.repository }}/actions/workflows/main.yml/dispatches \
+          -d '{"ref":"main"}'
+          
